fixing scripted tests