@@ -4,9 +4,9 @@ name := "sbt-assembly"
 
 organization := "com.eed3si9n"
 
-version := "0.8.3"
+version := "0.8.4-SNAPSHOT"
 
-CrossBuilding.crossSbtVersions := Seq("0.11.3", "0.11.2" ,"0.12.0-Beta2")
+// CrossBuilding.crossSbtVersions := Seq("0.11.3", "0.11.2" ,"0.12.0-Beta2")
 
 description := "sbt plugin to create a single fat jar"
 
@@ -22,17 +22,12 @@ publishArtifact in (Compile, packageDoc) := false
 
 publishArtifact in (Compile, packageSrc) := false
 
-lsSettings
-
-LsKeys.tags in LsKeys.lsync := Seq("sbt", "jar")
-
-(externalResolvers in LsKeys.lsync) := Seq(
-  "sbt-plugin-releases" at "http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases")
-
 // CrossBuilding.scriptedSettings
-// ScriptedPlugin.scriptedSettings
+ScriptedPlugin.scriptedSettings
 
-// scriptedBufferLog := false
+scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M")
+
+scriptedBufferLog := false
 
 publishMavenStyle := false
 
@@ -44,3 +39,10 @@ publishTo <<= (version) { version: String =>
 }
 
 credentials += Credentials(Path.userHome / ".ivy2" / ".sbtcredentials")
+
+// lsSettings
+
+// LsKeys.tags in LsKeys.lsync := Seq("sbt", "jar")
+
+// (externalResolvers in LsKeys.lsync) := Seq(
+//   "sbt-plugin-releases" at "http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases")
